Bjerksund-Stensland (2002) added + Project Panama (pbivnorm FORTRAN library used to calculate CBND)